--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@types/fs-extra": "^9.0.2",
     "@types/minimist": "^1.2.0",
     "@types/node": "^14.11.10",
+    "@types/run-parallel-limit": "^1.0.0",
     "axios": "^0.21.0",
     "fs-extra": "^9.0.1",
-    "minimist": "^1.2.5"
+    "minimist": "^1.2.5",
+    "run-parallel-limit": "^1.0.6"
   }
 }
